# rl-tracker

./: .gitignore  .gitmodules  README.md  build-server.sh
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.tsx  index.tsx
frontend/src/Components/: ChangeStatistic.tsx  PosNegStatistic.tsx  RankImg.css  RankImg.tsx  RankStatistic.tsx  RankSummary.tsx
frontend/src/Pages/NowPlaying/: NowPlaying.css  NowPlaying.tsx  PlayerName.tsx
frontend/src/Pages/SessionStats/: SessionStats.tsx
frontend/src/Protocol/: Types.tsx
frontend/src/Util/: Broker.tsx
plugin/: .gitignore  CMakeLists.txt  CMakeSettings.json  Makefile  cmake_install.cmake  functionsAlphabetized.txt  makefile.win
plugin/src/main/cpp/: RlTrackerPlugin.cpp  StreamPlugin.cpp  Test.cpp  tcp_connection.cpp  tcp_server.cpp
plugin/src/main/headers/: RlTrackerPlugin.h  StreamPlugin.h  Test.h  data_types.h  tcp_connection.h  tcp_server.h  tcp_server.h.bak
plugin/src/main/headers/log/: bakkes_sink.h
server/: server.ts
